# string_treatment

./: .gitattributes  .gitignore  README.md  example_non-treated.csv  graph_0.8.html  guide.ipynb  pyproject.toml  requirements.txt  test_standardize.py
src/string_treatment/: __init__.py
src/string_treatment.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: city_example_input.json  fake_example_input.json  hospital_example_input.json  test_standardize.py
